backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dev
  labels:
    app: backend
    env: dev
    version: v1
  annotations:
    owner: "Sumit Jeswani"
    description: "Backend API for K8s mastery project"
    repo: "https://github.com/jeswanisumit1999/k8s-mastery-project"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        env: dev
        version: v1
    spec:
      nodeSelector:
        kubernetes.io/hostname: node01
      containers:
      - name: backend
        image: docker.io/library/k8s-demo-backend:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 5
          failureThreshold: 2
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /livez
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 3
