backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
  labels:
    app: backend
spec:
  nodeSelector:
    kubernetes.io/hostname: node01
  containers:
  - name: backend
    image: docker.io/library/k8s-demo-backend:v1
    imagePullPolicy: Never
    ports:
    - containerPort: 3000
