postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  labels:
    app: postgres
spec:
  nodeSelector:
    kubernetes.io/hostname: node01
  containers:
  - name: postgres
    image: postgres:16-alpine
    ports:
    - containerPort: 5432
